docs/markdown/v2/investment-agreement.md
**SHARE SUBSCRIPTION AND SHAREHOLDERS’ AGREEMENT**

This Share Subscription and Shareholders’ Agreement ("**Agreement**") is made at the location specified as the *execution location* in Schedule 1 (“**Execution Location**”) on the date set forth as the *execution date* in Schedule 1 (“**Execution Date**”) and the persons whose names and addresses are set out in part 2 of Schedule 2 (collectively referred to as “**Investors**” and each an “**Investor**”); and the persons whose names and addresses are set out in part 4 of Schedule 2 (together “**Founders**” and each a “**Founder**”); and the persons whose names and addresses are set out in part 3 of Schedule 2 (together “**Other Shareholders**” and each an “**Other Shareholder**”); and the company whose details are set out in part 1 of Schedule 3 (the “**Company**”).

The Investors, the Founders and Other Shareholders are collectively referred to as "**Parties**" and each a “**Party**”.

**RECITALS: **

A	Company is engaged in the business described in part 1 of Schedule 3 ("**Business**");

B	The Founders are the promoters of the Company and their shareholding is set forth in the shareholding pattern of the Company as set out in part 2 of Schedule 3.

C	Investors have agreed to subscribe and the Company has agreed to issue and allot the Shares (as defined hereinafter) to the Investors ("**Transaction**");

D	The Parties now wish to record the terms and conditions of their mutual understandings in respect of this Transaction. 

**IT IS NOW AGREED AS UNDER**

**1****.	DEFINITIONS AND INTERPRETATION**

1.1	Capitalized terms used and not otherwise defined in this Agreement or its Schedules have the meanings set forth below:

"**Accounts**" shall mean the audited consolidated accounts of the Company for the 12 (twelve) month period ended on the Accounts Date, including the directors’ and auditors’ reports, relevant balance sheets and profit and loss accounts and related notes corresponding to such accounts;

"**Accounts Date**" shall mean March 31;

"**Act**" shall mean the Companies Act, 2013, as amended from time to time;

"**Affirmative Vote Items**" shall mean the following matters that the Company may propose to do: (i) alter the rights, preferences or privileges of the shares; (ii) allot any new shares beyond those anticipated by this Transaction; (iii) create any new class of shares; (iv) increase the number of shares reserved for issuance to employees and consultants, whether under the ESOP or otherwise; (v) redeem or acquire any shares; (vi) pay or declare dividends or distributions to shareholders; (vii) change the constitution of the Board or number of Board members; (viii) take any action which results in an Exit Event or a change of control; (ix) amend the memorandum and articles of association of the Company; (x) effect any material change to the nature of the business; and (xi) subscribe or otherwise acquire, or dispose of any shares in the capital of any other company. 

"**Affiliate**" shall mean any person that, directly or indirectly, through one or more intermediaries, Controls, is Controlled by, or is under common Control with a Party and shall include a subsidiary or a holding company of such person, and, in case of a Party being a natural person, the Relative of such Party;

"**Agreement**" shall mean this Agreement and the Schedules to this Agreement;

"**Board**" shall mean the board of directors of the Company;

"**Business**" shall mean the business of the Company as defined in Recital A;

"**Business Day**" shall mean a day which is not a public holiday in India;

"**Control**", “**Controlling**” or “**Controlled**” shall mean, with reference to an entity, the beneficial ownership directly or indirectly of more than 50% of the voting shares or securities of such entity or the power to control the majority of the composition of the board of directors of such entity or the power to direct the management or policies of such entity by contract or otherwise;

"**Deed of Adherence**" shall mean the current *latest* version (as on the date of this Agreement and as may be modified thereafter) of thedeed of adherence hosted at [http://seriesseed.in](http://seriesseed.in).

"**Equity Shares**" shall mean equity shares of the Company;

"**Exit Event**" shall mean a liquidation, dissolution, winding up, merger, acquisition, sale, exclusive license, change in Control or other disposal of substantially all of the Shares or assets of the Company;

"**Fully Diluted Share Capital**" shall mean the aggregate of the existing paid-up Equity Share capital of the Company and shall include and assume for the purposes of such computation, that all outstanding convertible securities (whether or not by their terms then currently convertible, exercisable or exchangeable), share options, warrants, including but not limited to any outstanding commitments to issue shares at a future date, have been so converted, exercised or exchanged, and the term “**Fully Diluted Basis**” shall be construed accordingly.

"**IP Rights**" shall mean patents, rights in inventions, know how, show how and trade secrets, copyright and related rights, moral rights, registered designs, design rights, database rights, semiconductor topography rights, trademarks and service marks, trade names, business names, brand names, get up, logos, domain names and URLs, rights in unfair competition, goodwill and rights to sue for passing off and any other intellectual property rights (in each case, whether or not registered, and including all applications to register and rights to apply to register any of them and all rights to sue for any past or present infringement of them) and all rights or forms of protection having equivalent or similar effect in any jurisdiction;

"**Lead Investor**" shall mean the Investor whose name is set out in Part 1 of Schedule 2 of this Agreement, or such Investor who may be nominated by the Investors from time to time in accordance with the provisions of this Agreement; 

"**Relative**" shall mean a relative as defined under the Act;

"**Resolutions**" means the resolutions to authorise and dis-apply pre-emption rights in respect of the allotment of Shares to the Investors;

"**Shares**"shall have the meaning defined in Schedule 1;

1.2	The Schedules form part of this Agreement and shall have effect as if set out in full in the body of this Agreement. Any reference to this Agreement includes the Schedules. In particular, the *Special Provisions* in Schedule 1 shall override any provisions to the contrary contained in this Agreement.

1.3	**Lead Investor****. **

1.3.1	Except where otherwise provided or if the context so requires, all decisions and communications to be taken by the Investors collectively under this Agreement shall be effected only via the Lead Investor. The Lead Investor’s decisions and communications shall be deemed to have the consent of the Investors. Any such decision shall be legally and contractually binding on all Investors. Investors’ representatives at a general meeting of members of the Company shall vote only in accordance with the voting decision of the Lead Investor.

1.3.2	Where a Party/Parties seeks to procure the consent of the Lead Investor or the Investors collectively, under a specific provision of this Agreement, the Party/Parties shall simultaneously send an email containing the request for consent to the Lead Investor with copies of the said communication to all Investors via email (the date of dispatch of email is referred to here as the "**Email Notice Date**").

1.3.3	The decision to provide or deny consent shall be arrived at solely by the Lead Investor after considering the views of the Investors, and such consent or denial of consent shall be provided by the Lead Investor (on behalf of the Investors) to the other Party/Parties not later than 14 (fourteen) days of the Email Notice Date. 

1.3.4	Notwithstanding the aforesaid, if an Investor, within 5 (five) days of the Email Notice Date, requests the Lead Investorto call a vote, the Lead Investor shall without delay call for a vote and set up a telephone conference call or email mechanism (or a web or mobile or such other voting mechanism provided by TermSheet.io) to conduct the vote and provide or deny consent within the timeline set forth in Clause 1.3.3. 

1.3.5	Where, in a provision that requires Investor consent, a time period is not set forth for providing consent, it shall be deemed to be a 14 (fourteen) day period commencing from the Email Notice Date. 

1.3.6	The Lead Investor may be replaced as Lead Investor under this Agreement in the event the Lead Investor voluntarily resigns from such role or in the event the Founder (if there are more than one Founder, a Founder or Founders holding a majority of the Founders’ Shares in the Company, hereinafter the "**Founder Majority**") requests the Investors in writing by way of email that the Lead Investor must be replaced which shall provide sufficiently good reasons that take into account the best interests of the Investors and the Company and which merit a substitution of the Lead Investor.Upon such request being made to the Investors, the Lead Investor and the Investors shall call a vote of the Investors to determine if the Lead Investor should be replaced; and if so, to nominate and appoint a new Lead Investor, which process shall be completed not later than 21 (twenty-one) days from the date of notice by the Founder or Founder Majority as the case may be. If the Investors have not substituted the Lead Investors within the said period of time, the Founder or Founder Majority, as the case may be, shall be entitled to nominate a new Lead Investor from among the Investors, who shall be the Lead Investor for the purposes of this Agreement. 

1.4	Unless otherwise stated in this Agreement or the context requires otherwise, references to the shareholding of a Party hereunder shall mean the shareholding of a Party in the Equity Share capital of the Company as calculated on a Fully Diluted Basis.

**2.	SUBSCRIPTION FOR SHARES**

2.1	Each Investor agrees to subscribe for, and the Company agrees to allot and issue to each Investor, such number of Shares at such price as is set out opposite its name in part 2 of Schedule 2. The shareholding pattern of the Company on a Fully Diluted Basis, upon the issue and allotment of the Shares, is set out in part 3 of Schedule 3.

2.2	The Founders and Other Shareholders agree to vote in favour of the Resolutions and hereby irrevocably waive all pre-emption rights conferred on them (whether by the Act, the Articles of Association of the Company or otherwise) in relation to the Shares required to be subscribed under this Agreement.

2.3	Each of the Founders, Other Shareholders and the Company shall, and to the extent possible shall procure, that the Resolutions are passed on or about the date of this Agreement and that all corporate actions on the part of the Company and its directors, officers, and shareholders are taken for the purposes of the authorisation, execution and delivery of the Agreement. In particular, prior to Closing, the Company, Founders and Other Shareholders shall take all necessary steps to effectuate this Transaction, including increasing the authorised capital of the Company and initiating a private placement in accordance with the Act.

**3.	CLOSING**

3.1	Closing shall occur on a day mutually agreed to between Founders and Lead Investor but no later than 7 (seven) days following the signing of this Agreement and not on a national holiday. Closing shall take place at the offices of the Company unless the Founders and the Lead Investor mutually agree to a different location. 

3.2	On or prior to Closing, each Investor shall deliver to the Company the subscription amount for the Shares as set out against its name in part 1 of Schedule 2 by bank transfer to the bank account of the Company (the details of which are set out in part 1 of Schedule 3) failing which the Company shall be entitled to terminate this Agreement vis-a-vis the defaulting Investor.

3.3	At Closing:

3.3.1	Parties shall convene a meeting of the Board to: (i) approve the issue and allotment of Shares; (ii) pass a resolution for convening an extra ordinary general meeting for adopting the restated Articles;

3.3.2	Company shall issue the relevant number of Shares credited as fully paid up to each Investor; comply with the necessary formalities under the Act with regard to a private placement; enter their names in the register of members in respect thereof; and execute and deliver to each Investor a share certificate reflecting the subscription of Shares as detailed in this Agreement and proof of payment of stamp duties in respect of such Shares;

3.3.3	Company shall convene an extraordinary general meeting of the shareholders of the Company where (i) a special resolution shall be passed adopting restated Articles incorporating the provisions of this Agreement; and (ii) the Board is re-constituted in accordance with this Agreement.

**4.	REPRESENTATIONS AND WARRANTIES **

4.1	Each Party represents, severally and not jointly, to the other Parties hereto that:

(a) 	such Party has the full power and authority to enter into, execute and deliver this Agreement and to perform the transactions contemplated hereby and that such Party is duly incorporated or organised and existing under the laws of the jurisdiction of its incorporation or organisation and that the execution and delivery by such Party of this Agreement and the performance by such Party of the transactions contemplated hereby have been duly authorised by all necessary corporate or other action of such Party;

(b) 	assuming the due authorisation, execution and delivery hereof by the other Parties, this Agreement constitutes the legal, valid and binding obligation of such Party, enforceable against such Party in accordance with its terms, except as such enforceability may be limited by applicable bankruptcy, insolvency, re-organisation, moratorium or similar laws affecting creditors’ rights generally; and

(c) 	the execution, delivery and performance of this Agreement by such Party and the consummation of the transactions contemplated hereby will not (i) violate any provision of the organisational or governance documents of such Party; (ii) conflict with or result in any material breach or violation of any of the terms and conditions of, or constitute (or with notice or lapse of time or both constitute) a default under, any instrument, contract or other agreement to which such Party is a party or by which such Party is bound; (iii) violate any order, judgement or decree against, or binding upon, such Party or upon its respective securities, properties or businesses; or (iv) violate any law or regulation of such Party's country of organisation or any other country in which it maintains its principal office.

(d) 	there are no legal, quasi-legal, administrative, arbitration, mediation, conciliation or other proceedings, claims, actions, governmental investigations, orders, judgements or decrees of any nature made, existing, or pending or, to the best knowledge of such Party, threatened or anticipated against such Party which may prejudicially affect its holding of Shares or the due performance or enforceability of this Agreement or any obligation, act, omission or transactions contemplated hereunder.

4.2	Founders represent to the Investors that the information and materials they have shared with the Investors in reliance of which they have entered into this Agreement is true and accurate and they have not omitted to disclose any significantly material information relating to the Company that would adversely affect the valuation of the Company.

**5.	MANAGEMENT OF THE COMPANY**

5.1	Immediately at Closing and thereafter, the Parties shall take all necessary action to ensure that the Board shall be re-constituted to comprise only of 3 (three) directors of whom 2 (two) directors shall be nominees of Founders ("**Founder Nominee Directors**") and 1 (one) director shall be a nominee of the Lead Investor (“**Investor Nominee Director**”). 

5.2	Notwithstanding any other provision of this Agreement or any power conferred upon the Board by this Agreement, the Act or the Articles, the Parties shall ensure that none of the Board, shareholders or the Company shall undertake any of the matters covered by Affirmative Vote Items without the prior consent of the Founders (or Founders Majority, where applicable) and the Lead Investor. Such consent may be provided by vote at meetings of the shareholders, or in writing by the Founders and Lead Investor otherwise. By way of abundant clarification, Founders shall have complete operational control over the Company including but not limited to nominating the CEO, CTO and COO of the Company.

5.3	The Founders and Investors shall procure that each appointment, removal or replacement of the directors on the Board in terms of Clause 5.1 above is implemented without delay and where necessary, meetings of the shareholders of the Company, or meetings of the Board, as applicable, are convened for this purpose. 

5.4	Directors need not hold any qualification shares.

5.5	If any of the Founder Nominee Directors resigns, vacates or is removed from office before his/her term expires, the resulting casual vacancy may only be filled by a director nominated by the Founders. Similarly, if the Investor Nominee Director resigns, vacates or is removed from office before his/her term expires, the resulting casual vacancy may only be filled by a director nominated by the Lead Investor. 

5.6	The Board shall hold meetings, approve decisions or pass resolutions and grant consents in accordance with the following procedures.

5.7	The Board shall meet once every quarter and at least 4 (four) times in every calendar year. Meetings of the Board shall be held at such place as mutually decided by the Founders, from time to time.

5.8	Any director may, and the secretary of the Company, if so appointed, shall, on the requisition of a director, summon a meeting of the Board, in accordance with the notice and other requirements set out below.

5.9	At least 14 (fourteen) calendar days prior written notice shall be given to each of the directors of any meeting of the Board. Any director wishing to place a matter on the agenda for any Board meeting may do so by written communication to the Founders and the company secretary,5 (five) Business Days in advance of the date of dispatch of the notice of Board meeting, so as to permit timely dissemination of information with respect to the agenda items to all directors.

5.10	A meeting of the Board may be held at shorter notice with the written consent (which may be signified by letter or e-mail with receipt acknowledged) of at least 1 (one) Founder Nominee Director and the Investor Nominee Director.

5.11	The quorum for a meeting of the Board shall be any 2 (two) directors, and the Founder Nominee Director and Investor Nominee Director shall be a part of the quorum for a meeting if any of the matters covered by Affirmative Vote Items are being discussed.

5.12	If a quorum (as required under this Clause) is not present at a Board meeting within half an hour of the time appointed for a properly convened meeting, the meeting shall be adjourned for 5 (five) Business Days (or the next succeeding day thereafter in the event such a day is a national holiday) to be held at the same place and time of day. 

5.13	If at such adjourned meeting a quorum is not present within half an hour of the time appointed for a properly convened meeting, the meeting shall be adjourned again for 5 (five) Business Days to be held at the same place and time of day. 

5.14	At such adjourned meeting, the Board members present shall constitute a quorum provided at least 2 (two) directors are present. 

5.15	The Board shall have the power to allow electronic or remote participation (such as tele-conferencing and video conferencing) in Board meetings, subject to compliance with the relevant requirements under applicable laws.

5.16	The Board may act by written resolution, or in any other legally permissible manner, on any matter, except for matters, specified otherwise in this Agreement or which by law may only be acted upon at a meeting. Subject to any restrictions imposed by law, no written resolution shall be deemed to have been duly adopted by the Board, unless such written resolution shall have been approved by the requisite majority of directors under law and as provided in various provisions in this Agreement and the Articles. A resolution in writing signed by a majority of the directors for the time being whether in Execution Location or elsewhere shall be as effective as a resolution passed at a meeting of the Board duly convened and held and may consist of several documents in the like form each signed by one or more of the directors.

5.17	Any director appointed to the Board shall be entitled to nominate an alternate to attend and vote at Board meetings in his absence. Such alternate shall be approved in writing by the respective shareholders who have nominated such director and shall be appointed by the Board in accordance with the provisions of applicable law.

5.18	All questions arising at any meeting of the Board or decision by circular resolutions shall be decided by a simple majority of votes, subject to Affirmative Vote Items provision.

5.19	Only the Board can appoint a committee of directors or delegate its powers to any persons. The provisions relating to the proceedings of meetings of the Board contained herein shall apply *mutatis mutandis* to the proceedings of the meetings of the committee of the Board.

6.	**GENERAL MEETINGS**

6.1	General meetings of the shareholders shall be held as per the provisions of the Act. Subject to the foregoing, the Board, on its own or at the request of Founders, may convene an extraordinary general meeting of the shareholders, whenever they deem appropriate.

6.2	At least 21 (twenty-one) calendar days’ prior written notice of every annual general meeting of shareholders shall be given to all shareholders whose names appear on the Register of Members of the Company. A meeting of the shareholders may be called by giving shorter notice with the written consent of the minimum number of shareholders as provided by the Act including the Founder (or Founder’s Majority, as the case may be).

6.3	The notice shall specify the place, date and time of the meeting. Every notice convening a meeting of the shareholders shall set forth in full and sufficient detail of the business to be transacted thereat, and no business shall be transacted at such meeting unless the same has been stated in the notice convening the meeting.

6.4	The chairman of the Board shall be a Founder who shall be the chairman for all general meetings. The chairman of the general meeting shall not have any second or casting vote.

6.5	Any shareholder of the Company may appoint another person as his proxy (and in case of a corporate shareholder, an authorized representative) to attend a meeting and vote thereat on such shareholder’s behalf, provided that the power given to such proxy or representative must be in writing. Any person possessing a proxy or other such written authorization with respect to any Equity Shares shall be able to vote on such Equity Shares and participate in meetings as if such person were a shareholder, subject to the applicable law.

6.6	The quorum for a general meeting of the members of the Company shall be any 2 (two) members, subject to at least one Founder and director nominated by the Lead Investor being present where any Affirmative Vote Items are discussed, unless each of the Founders or the director appointed by the Lead Investor, as the case may be, provide written notice prior to commencement of any general meeting or adjourned meeting waiving the requirement of their presence to constitute valid quorum for a particular general meeting or adjourned meeting, as the case may be. 

6.7	If a quorum is not present within 30 (thirty) minutes of the scheduled time for any shareholders' meeting or ceases to exist at any time during the meeting, then the meeting shall be adjourned, to the same day, place and time in the next succeeding week (it being understood that the agenda for such adjourned meeting shall remain unchanged and the quorum for such adjourned meeting shall be the same as required for the original meeting).

6.8	In the event that the agenda for an original meeting and consequently an adjourned meeting only contains matters other than matters covered under Affirmative Vote Items, then even if an authorized representative of a Lead Investor is not present at such an adjourned meeting, or indicates his consent or dissent on the matters on the agenda of such meeting, the quorum shall be deemed to have been validly constituted for such meeting even without the presence of such authorized representative of a Lead Investor, so long as none of the matters covered by Affirmative Vote Items are taken up for vote or discussion at such meeting. 

6.9	Except as otherwise required by the relevant applicable laws, all decisions of the shareholders shall be made by a simple majority of votes of shareholders on the basis of the Shares held by them on a Fully Diluted Basis.

**7.	RESTRICTIVE COVENANTS**

7.1	For the purpose of assuring to the Investors the value of the business of the Company and the full benefit of the goodwill of the business of the Company, each Founder separately covenants with the Investors and the Company that he shall not, save with the prior consent of the Lead Investor, while he is a director or employee of, a shareholder holding not less than 25% (twenty five percent) of the shareholding in the Company, or a consultant to, the Company andfor a period of 12 (twelve) months thereafter, carry on or be concerned, engaged or interested directly or indirectly (in any capacity whatsoever) in any trade or business competing with the trade or business of the Company as carried on at the time or, in relation to any trade or business of the Company that such Founder has been engaged or involved in, at any time during a period of 12(twelve)months immediately preceding that time.

7.2	The Founders hereby also agree that so long as each of the Founders continue to be employed with the Company and for a period of 6 (six) months thereafter, each of the Founders shall not:

(a)      directly or indirectly, partner with or enter into any activity or hire or attempt to hire for any purpose whatsoever (whether as an employee, consultant, advisor, independent contractor, partner or otherwise) any employee of the Company or any person who was an employee of the Company at any time during the last 6 (six) months of his employment, and shall use its best efforts to prevent any of its related entities or persons from taking any such action;

(b)     personally or through any other person, approach, recruit or otherwise solicit employees of the other Party to work for any other employer;            

(c)     persuade any person which is a client/customer of the Company, to cease doing business or to reduce the amount of business which any such person has customarily done or might propose doing with the Company; and

(d)      invest in any business that competes with the business activities of the Company.

7.3	Nothing in this Clause 7 shall prohibit any Founder from holding any interest in the Shares or other securities of a company traded on a securities market so long as such interest does not extend to more than 3 (three) percent of the issued share capital of the company or the class of securities concerned.

**8.	FURTHER ISSUANCE**

8.1	The Company and the Founders shall not provide any person with rights in relation to the Company which are more favourable than those provided or proposed to be provided to the Investors under this Agreement or the Articles without Lead Investor’s prior written consent and if such consent is granted, it shall be deemed that the more favourable terms, at the option of the Lead Investor, shall apply to the Shares as well. 

8.2	In the event the Company is desirous of issuing any new Shares after Closing, including by way of a preferential allotment ("**Proposed Issuance**"), the Company shall provide and the Founders shall cause the Company to provide, a right to the Investors (represented by the Lead Investor) to participate on a pro-rated basis (based on the shareholding computed on a Fully Diluted Basis) in any such Proposed Issuance. 

8.3	The Company shall give the Investors written notice of any such Proposed Issuance and such notice shall specify: (i) the number and class of shares proposed to be issued; (ii) the price of the Proposed Issuance; (iii) The manner and time of payment of the subscription amount; (iv) the identity and address of the person to whom the Proposed Issuance is to be made; and (iv) the date of the Proposed Issuance (the "**Offered Terms**").

8.4.	Each of the Investors shall communicate in writing, whether or not the Offered Terms are acceptable to them within 7 (seven) days from the date on which it received the Offered Terms in writing. If the Investors do not accept the Offered Terms as specified above or fail to respond within the stipulated time, then the Company shall have the right to make the Proposed Issuance in favour of the person specified in the Offered Terms, provided such Proposed Issuance is on terms identical to, or less favourable to the subscriber, than the Offered Terms. Any such Proposed Issuance in favour of the Investors shall be completed within a period of 60 (sixty) days after the receipt of the Offered Terms by the Founders, failing which the Company shall have the right to make the Proposed Issuance in favour of the person specified in the Offered Terms. 

8.5	If the Investors have agreed to participate in the Proposed Issuance, each Investor shall have the right to subscribe to such portion of the Proposed Issuance as shall be necessary for such Investor and the Founders, as the case may be, to maintain their respective shareholding percentage in the Company (calculated on a Fully Diluted Basis), and shall cooperate with the Company to consummate the transactions contemplated herein within the stipulated time period. All Shares issued in the Proposed Issuance shall be issued contemporaneously.

8.6	Each of the Parties to this Agreement agrees that if any person wishes to be registered as a holder of any Shares (whether upon transfer or transmission or by issue) ("**New Shareholder**"), the New Shareholder must, unless he is already a party to this Agreement, deliver an executed Deed of Adherence in favour of all the other Parties to this Agreement.

8.7	Each of the Founders and the Other Shareholders covenants with and undertakes to the Investors and the Company that, he/she shall not, without obtaining prior consent of the Lead Investor, dispose or permit the disposal of any interest in or creating of any Encumbrance over the Shares in the Company which are registered in his/her name. For the purposes of this Clause, "**Encumbrance**" means any mortgage, charge, pledge, lien, deposit by way of security, bill of sale, option, assignment (contingent or otherwise), right to acquire, right of pre-emption or agreement for or obligation as to any of the same, or any other form of right, interest, security, encumbrance or equity of any nature in favour of a third party.

8.8	If at any time after Closing, the Company proposes to issue to any person (other than pursuant to the ESOP, if applicable) any Shares or other instruments which confer a right to form a part of the share capital at a later date, at a price per Share that is lower than the weighted average of the subscription price of Investors’ Shares (such an event being referred to as a "**Dilution Event**"), then the Investors shall, if such weighted average price per Share is lower than the price of Investors’ Shares, be entitled to broad-based weighted average anti-dilution protection. 

**9.	TRANSFER OF SHARES**

9.1	Any attempt by any of the Founders or Other Shareholders to Transfer their Equity Shares in contravention of the provisions contained herein shall be considered void and invalid. The Company shall not be required (a) to transfer on its books any Equity Shares of the Company which shall have been transferred in violation of any of the provisions set forth in this Agreement or (b) to treat as owner of such Shares or to accord the right to vote as such owner or to pay dividends to any transferee to whom such Shares shall have been so transferred.

9.2	Right of First Refusal of the Investors.

9.2.1	Subject to the prior approval of Board always, if at any time during the subsistence of this Agreement, any of the Founders or Other Shareholders (the "**Transferring Shareholder**") proposes to Transfer their portion of their Equity Shares in the Company to a third party pursuant to a bona fide offer by the said third party, the Transferring Shareholder shall immediately deliver a written notice (“**Offer Notice**”) to the Investors describing accurately and in reasonable detail the terms and conditions of the offer, including the timing as to execution, the number of Equity Shares subject to the offer (the “**Offer Shares**”) and the price to be paid for such Equity Shares pursuant to such offer, the name and address of the third party, any agreements or documents to be executed and delivered relating to such offer, any related terms and conditions and any additional information reasonably required by the Investors.

9.2.2	Upon the Offer Notice being delivered to the Investors, the Investors shall have the right exercisable at its sole discretion within the time period set forth in the Offer Notice (provided that such period shall in no event be less than 15 (fifteen) days from the date the Offer Notice is received by the Investors (such period is called the "**Offer Period**"), to give to the Transferring Shareholder a notice in writing to purchase on a pro rata basis, the Offer Shares. If the Investors, at its sole discretion, do not exercise their right of first refusal, the Transferring Shareholder shall offer all the Offer Shares to the third party after the expiry of such period on terms no more favorable to the third party than those contained in the Offer Notice, within a period of 90 (ninety) days following delivery of the Offer Notice to the Investors. If the Offer Shares are not sold within such 90 (ninety) day period, the rights of the Investors pursuant to this Clause 9.2 shall again take effect and revive with respect to any sale of Equity Shares of the Company held by the Transferring Shareholder.

9.3	Tag-Along Right

9.3.1	In the event of the Company, or any of the Investors not purchasing the Offer Shares so offered by the Transferring Shareholder, the Transferring Shareholder shall obtain an offer on the same terms for the purchase of the proportionate number of Shares held by the Investors ("**Tag Shares**"), provided that the Investors shall be entitled to Transfer their proportionate shareholding on the same terms before any Shares held by the Transferring Shareholder is Transferred. The Transferring Shareholder shall deliver a written notice (the “**Sale Notice**”) to the Investors offering the Investors the option to participate in such Transfer. Such Sale Notice shall specify in reasonable detail the identity of the prospective transferee and the terms and conditions of such Transfer at the identical price and on the same terms and conditions as the Transferring Shareholder. 

9.3.2	The Investors shall, within 30 (thirty) days of receiving the Sale Notice, give written notice (the "**Tag-Along Notice**") to the Transferring Shareholder stating their acceptance to participate in such proposed Transfer and specifying the number of Tag Shares proposed to be Transferred by them. 

9.3.3	In respect of the Investors giving the Transferring Shareholder a timely Tag-Along Notice, the Transferring Shareholder shall cause the prospective transferee to agree to acquire the Tag Shares identified in such Tag-Along Notice that are given to the Transferring Shareholder, at the same price and upon the same terms and conditions as applicable to the Transferring Shareholder's Shares (save and except that the Investors shall not be required to give any representations or warranties save and except as to their full rights and title to its Shares). Notwithstanding anything to the contrary contained in this Agreement or elsewhere, no Equity Shares shall be Transferred by the Transferring Shareholder until the prospective transferee acquires all Tag Shares (calculated on a proportionate basis to the Transferring Shareholder’s Shares) identified in all Tag-Along Notices.

9.3.4	To the extent that the Investors do not elect to participate in the Transfer that is subject of the Sale Notice, the Transferring Shareholder may enter into an agreement providing for the closing of the Transfer of such Offer Shares covered by the Sale Notice on terms and conditions that are the same as those described in the Sale Notice. 

9.4	The Equity Shares held by Founders shall be subject to a vesting schedule as follows: (a) 25% of the Equity Shares held by each Founder shall vest immediately at Closing; and (b) the balance 75% shall vest on a monthly basis over a period of 3 (three) years after Closing. Upon termination of employment of a Founder prior to the expiry of the said 3(three) years after Closing ("**Founder Termination Date**") for any reason, such portion of Founder’s Equity Shares that are unvested may be bought back by the Company at par value or such lesser amount as may be permissible under applicable law not later than 60 (sixty) days after Founder Termination Date. The vested Equity Shares held by Founder on the Founder Termination Date may continue to be held by the Founder but subject to the terms of this Agreement. 

9.5	If any of the shareholders Transfer any Equity Shares in the Company to a third party, then such third party buyer shall execute a deed of adherence in a form and manner acceptable to a majority of the Company’s shareholders. The shareholders shall not Transfer the Equity Shares to a competitor of the Company’s Business (such determination to be made by the Founders and communicated with reasoning when requested by the Lead Investor). 

# **10.		LIQUIDATION PREFERENCE**

# 10.1	On the occurrence of an Exit Event, the total proceeds from such an Exit Event remaining after discharging or making provision for discharging the liabilities of the Company, shall be distributed first to the Investors, who shall be entitled to receive before any return to holders of Equity Shares, a "**Liquidation Preference**" equal to the higher of: (i)1x (i.e. one time) the subscription amount invested by such Investor; or (ii) pro rata portion of the remaining proceeds from the Exit Event (calculated on a fully diluted basis) as distributed to all shareholders of the Company. Upon distribution of the Liquidation Preference to the Investors, all remaining shareholders will be entitled to recover their pro rata share of the remaining total proceeds based on their inter-se shareholding. 

**11.	CONVERSION**

11.1 	The Shares shall be converted into Equity Shares based on an initial conversion price equal to the price per share set forth in part 3 of Schedule 3 for each holder of Shares ("**Conversion Price**") no later than the earlier of (i) the occurrence of an Exit Event, if conversion is necessary by the terms of the Exit Event; (ii) consummation of a qualified initial public offering or any initial public offering or upon the filing of the draft red herring prospectus or the red herring prospectus, whichever is required by applicable law; or (iii) 19 (nineteen) years from the date of Closing, and at the end of the nineteenth year period, such Shares which are not so converted shall stand automatically converted into Equity Shares. The number of Equity Shares to be issued to the holders of the Shares upon conversion shall be determined on a Fully Diluted Basis.

11.2 	No fractional Shares shall be issued upon conversion of any Share and the number of Equity Shares issuable upon conversion of the Shares shall be rounded off to the nearest whole Share (provided that such rounding off shall take place only after considering all of the Shares then being converted by the Investors).

11.3	Except as otherwise provided herein, conversion of each Share shall be deemed to have been effected, upon the Company taking on record the surrender of the Shares and upon the Company issuing the share certificates representing the Equity Shares issued upon conversion of such Shares.

**12.	INFORMATION RIGHTS**

12.1	The Company shall for each financial quarter prepare accounting records that: (i) are sufficient to: (a) show and explain the Company’s transactions; (b) disclose with reasonable accuracy, at any time, the financial position of the Company at that time; (c) enable the directors to ensure that any accounts required to be prepared comply with the requirements of the Act; (ii) contain: (a) entries from day to day of all sums of money received and expended by the Company and the matters in respect of which the receipt and expenditure takes place; (b) a record of the assets and liabilities of the Company; and (c) if the Company’s business involves dealing in goods, statements of stock held by the Company at the end of each financial quarter of the Company; and shall deliver such accounting records to the Investors within 21 (twenty-one) Business Days after the end of each financial quarter. 

12.2	The Company shall at least 30 (thirty) Business Days prior to the end of each financial year deliver to Investors a final form of business plan (on the understanding that such a plan is subject to change by the management team and is provided only as a measure of visibility) and/or an operating and capital budget and cash flow forecast in respect of the next financial year and a comparison against the previous financial year.

12.3	The Company shall promptly provide the Investors with such other information concerning the Company and its business as the Investors may reasonably require from time to time, including all information that may be available under the Act to any equity shareholders of the Company.

**13.	TERMINATION**

13.1	This Agreement shall terminate in the manner stated below:

13.1.1	with respect to any Party, upon such Party and all of its Affiliates ceasing to hold any Shares; or

13.1.2	with respect to every Party hereto, on the Parties hereto agreeing to terminate this Agreement.

13.2	The rights and obligations of the Parties under this Agreement, which either expressly or by their nature survive the termination of this Agreement, shall not be extinguished by termination of this Agreement.

13.3	The termination of this Agreement in any of the circumstances aforesaid shall not in any way affect or prejudice any right accrued to any Party against the other Parties, prior to such termination.

**14.**	**INTELLECTUAL PROPERTY RIGHTS AND CONFIDENTIALITY**

14.1	All the IP Rights arising out of the performance by the Company of its Business and the inputs of the Founders in the course of their association with the Company, shall be owned by the Company and all Parties shall assist the Company in securing the same by filing for appropriate protection under applicable laws in the name of the Company. No Party to this Agreement shall act in any manner derogatory to the proprietary rights of the Company over such IP Rights.

14.2	The Founders and the Company hereby jointly and severally undertake that all IP Rights, prior to or after execution of this Agreement, arising from development of solutions, products, projects executed, databases, copyrights, trademarks, brand name, and other IP Rights that relate to the Business of the Company are registered exclusively in the name of the Company.

14.3	The Founders further undertake that they shall not provide any new service or any variations or improvements of the existing services of the Company other than through the Company.

14.4 	The Parties recognize that each of them may be given and have access to confidential and proprietary information of the other Parties. The Parties undertake not to use any of such confidential information for their own corporate purposes or any other purpose without the prior written consent of the Party owning such information and shall use their best efforts to keep confidential and not to disclose to any person any such confidential and proprietary information. 

14.5	The restrictions in Clause 14.4 shall not apply to disclosure of confidential information by either Party if and to the extent the disclosure is: (a) required by the law of any jurisdiction; (b) required by any applicable securities exchange, supervisory or regulatory or governmental body to which the relevant party is subject or submits, wherever situated, whether or not the requirement for disclosure has the force of law; (c) made to a prospective purchaser of Shares and which is disclosed pursuant to negotiations for an arm’s length sale of Shares in accordance with the provisions hereof to a recipient which in the reasonable opinion of the disclosing Party is able to complete the purchase of the disclosing Party’s Shares and enter into a Deed of Adherence and comply with its terms, provided that before any information is disclosed, the intended recipient of such information shall have given a confidentiality undertaking to the disclosing Party (in terms which are no less strict than this Clause); (d) made to representatives on a need to know basis (provided that such persons are required to treat such information as confidential).

**15.	DISPUTE RESOLUTION**

15.1	If any dispute arises between any of the Parties hereto during the subsistence or thereafter, in connection with the validity, interpretation, implementation or alleged breach of any provision of this Agreement or regarding any question, including the question as to whether the termination of this Agreement by any Party hereto has been legitimate, the Parties hereto shall endeavour to settle such dispute amicably. The attempt to bring about an amicable settlement is considered to have failed as soon as one of the Parties hereto, after reasonable attempts, which attempt shall continue for not less than 15 (fifteen) days, gives 15 (fifteen) days’ notice thereof to the other Party in writing.

15.2	In case of such failure, the dispute shall be referred to a sole arbitrator. The arbitration proceedings shall be governed by the provisions of the Arbitration and Conciliation Act, 1996. In the event of a failure to agree upon a sole arbitrator within a period of 15 (fifteen) days of receipt of notice, 1 (one) arbitrator each shall be appointed by the Founders, on the one hand, and the Lead Investor, on the other hand. The two arbitrators so appointed shall together appoint a third arbitrator, who shall be the chairperson of the arbitral panel. It is expressly clarified that these dispute resolution provisions apply to claims or disputes concerning any and all Parties to this Agreement and not just to disputes between the Founders and the Lead Investor.

15.3	The arbitration proceedings shall be held at the Execution Location. The arbitration proceedings shall be in English language. The award shall be substantiated in writing. The court of arbitration shall also decide on the costs of the arbitration proceedings. The award shall be binding on the disputing Parties subject to applicable laws and the award shall be enforceable in any competent court of law. The provisions of this Clause 15 shall survive the termination of this Agreement for any reason whatsoever. The courts at Execution Location shall have exclusive jurisdiction.

**16.	MISCELLANEOUS**

16.1	Amendment. No variation of this Agreement shall be valid unless it is in writing and signed by the Company, Founders and by the Investors.

16.2	The Company shall bear the costs and disbursements incurred in negotiating and closing this Agreement and of matters incidental to this Agreement (which shall include all costs and consulting and advisory fees related to TermSheet.io).

16.3	The Company and the Founders shall be entitled to make public announcements and issue press releases and respond to enquiries from the press or other media concerning or relating to this Agreement and its subject matter.

16.4	This Agreement shall be binding on and endure for the benefit of each Party’s personal representatives and successors in title.  This includes any successor to any Shares in the Company transferred in accordance with this Agreement.

16.5	This Agreement and the documents referred to or incorporated in it constitute the entire agreement between the parties relating to the subject matter of this Agreement and supersedes and extinguishes any prior drafts, agreements, undertakings, representations, warranties and arrangements of any nature whatsoever, whether or not in writing, between the Parties in relation to the subject matter of this Agreement.

16.6	Each of the Parties acknowledges and agrees that it has not entered into this Agreement in reliance on any statement or representation of any person (whether a party to this Agreement or not) other than as expressly incorporated in this Agreement. 

16.7	Each of the Parties acknowledges and agrees that the only cause of action available to it under the terms of this Agreement and the documents referred to or incorporated in this Agreement shall be for breach of contract.

16.8	Nothing contained in this Agreement or in any other document referred to or incorporated in it shall be read or construed as excluding any liability or remedy as a result of fraud.

16.9	The invalidity, illegality or unenforceability of any provisions of this Agreement shall not affect the continuation in force of the remainder of this Agreement.

16.10	Nothing in this Agreement is intended or shall be construed as establishing or implying any partnership of any kind between the Parties.

16.11	Any notice to be given in connection with this Agreement shall be in writing in English and shall either be delivered by hand or sent by first class post or fax, email or other electronic form:

16.11.1 	to any company which is a Party at its registered office (or such other address as it may notify to the other Parties to this Agreement for such purpose); or

16.11.2 	to any individual who is a Party, at the address of that individual shown in Schedule 2; 

(or in each such case such other address as the recipient may notify to the other Parties for such purpose).

16.12	A communication sent according to Clause 16.11 of this Agreement shall be deemed to have been received:

16.12.1 	if delivered by hand, at the time of delivery;

16.12.2 	if sent by pre-paid first class post, on the second day after posting; or

16.12.3 	if sent by fax, email or other electronic form, at the time of completion of transmission by the sender.

16.13	A Party shall cease to be a party to this Agreement from the date he ceases to hold or beneficially own any Shares in the capital of the Company (but without prejudice to any benefits and rights enjoyed prior to such cessation).

16.14	This Agreement may be executed in any number of counterparts each of which when executed by one or more of the parties hereto shall constitute an original but all of which shall constitute one and the same instrument.

This Agreement has been executed and delivered on the Execution Date.

*** Signature Page follows along with Schedules (renumbered as page 1)***

